# gemini

./: Cargo.toml  README.md  compiler-shader.bat
.github/workflows/: rust.yml
assets/gltf/: monkey.glb
src/: components.rs  input.rs  main.rs  physics.rs  scene.rs
src/components/: camera.rs  material.rs  mesh.rs  mod.rs  player.rs  primitive.rs  transform.rs
src/ecs/: components.rs  entity.rs  mod.rs  scene.rs
src/gpu/: context.rs  geometry.rs  material.rs  mesh.rs  mod.rs  pipeline.rs  render.rs  texture.rs  uniform.rs  vertex.rs
src/gpu/uniform/: context.rs  data.rs  layouts.rs  mod.rs
src/resources/: manager.rs  map.rs  mod.rs  model.rs  prefab.rs  scene.rs
src/shader/: unlit.frag  unlit.frag.spv  unlit.vert  unlit.vert.spv  unlit.wgsl
src/shapes/: mod.rs  quad.rs
src/systems/: mod.rs  player.rs  transform.rs
