[package]
authors = ["matpx <matpx@users.noreply.github.com>"]
edition = "2018"
name = "hypergrid"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.5.0"
glam = "0.12.0"
pollster = "0.2.0"
wgpu = "0.6.2"
winit = "0.24.0"
