[package]
authors = ["matpx <matpx@users.noreply.github.com>"]
edition = "2018"
name = "gemini"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.5.0"
glam = {version = "0.12.0", features = ["serde"]}
gltf = "0.15.2"
itertools = "0.10.0"
pollster = "0.2.1"
serde = {version = "1.0.123", features = ["derive"]}
serde_json = "1.0.61"
slab = "0.4.2"
slotmap = "1.0.2"
smallvec = "1.6.1"
wgpu = "0.7.0"
winit = "0.24.0"
